# ArchiAgents

./: .gitignore  ARCHITECTURE_DIAGRAM.md  BACKEND_FRONTEND_STATUS.md  BACKEND_IMPLEMENTATION_COMPLETE.md  BACKEND_QUICKSTART.md  BACKEND_SERVICES_COMPLETE.md  BRANDING_CHECKLIST.md  BRANDING_COMPLETE.md  BRANDING_IMPLEMENTATION_SUMMARY.md  BRANDING_QUICK_REFERENCE.md  BRAND_GUIDELINES.md  CLI_FILE_STRUCTURE.md  CLI_IMPLEMENTATION_COMPLETE.md  CLI_SCENARIOS_GUIDE.md  CLI_TEST_EXECUTION_SUMMARY.md  CLI_TEST_QUICKSTART.md  FRONTEND_COMPLETE_SUMMARY.md  FRONTEND_PAGES_COMPLETE.md  LICENSE  LLM_PROVIDERS_GUIDE.md  MODEL_GENERATION_QUICKSTART.md  MULTI_PROVIDER_LLM_IMPLEMENTATION.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SESSION_BACKEND_COMPLETE.md  SESSION_SUMMARY_WEB_BACKEND.md  SESSION_UPDATE_PAGES_COMPLETE.md  TOGAF_CONVERSION_SUMMARY.md  TOGAF_FRAMEWORK_ARCHITECTURE_DIAGRAM.md  TOGAF_FRAMEWORK_COMPLETION_SUMMARY.md  TOGAF_PYTHON_IMPLEMENTATION_SUMMARY.md  VISUAL_EDITOR_CHECKLIST.md  VISUAL_EDITOR_COMPLETE.md  VISUAL_EDITOR_SUMMARY.md  VISUAL_EDITOR_TESTING_GUIDE.md  WEB_APP_ADVANCED_FEATURES_COMPLETE.md  WEB_APP_IMPLEMENTATION_GUIDE.md  WEB_APP_INTEGRATION_QUICKSTART.md  (+27 more)
.github/: copilot-instructions.md
Docs/ai-solution-architect/: .env.example  .gitignore  README.md  architect.py  license  main.py  pyproject.toml
Docs/ai-solution-architect/agents/: aws_agents.py
Docs/ai-solution-architect/tasks/: aws_tasks.py
Docs/ai-solution-architect/tools/: calculator_tools.py
Docs/ai-solution-architect/utils/: callbacks.py  helpers.py
(+4077 files in other folders)
